fixed text and lock alignment at bottom

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,8 @@
 @import "bootstrap";
 
+.no-margin{
+  margin:0 auto;
+}
 
 .centered {
   text-align: center;
